Hide on mobile, fix paddings on tablet

--- a/client/app/components/sections/Topbar/Topbar.css
+++ b/client/app/components/sections/Topbar/Topbar.css
@@ -52,8 +52,14 @@
 }
 
 .topbarAvatarDropdown {
-  padding: var(--Topbar_avatarPadding);
+  padding: var(--Topbar_avatarMobilePadding);
   font-family: var(--Topbar_fontFamily);
   font-size: var(--Topbar_fontSize);
   align-self: flex-start;
+  display: none;
+
+  @media (--Topbar_medium) {
+    display: block;
+    padding: var(--Topbar_avatarPadding);
+  }
 }
